[gd_scene load_steps=14 format=3 uid="uid://c0oemwjnw3ado"]

[ext_resource type="Script" path="res://resources/entity/EntityBase.gd" id="1_7o8nw"]
[ext_resource type="PackedScene" uid="uid://bt7gxb722f7am" path="res://resources/effects/hit_effect.tscn" id="2_mrjjy"]
[ext_resource type="PackedScene" uid="uid://06bpte4ipw7t" path="res://resources/overlap/HurtBox.tscn" id="2_rdp35"]
[ext_resource type="PackedScene" uid="uid://bt12aujcuv6yj" path="res://resources/effects/DeathEffect.tscn" id="3_2qsey"]
[ext_resource type="Texture2D" uid="uid://ru3ny0eo6mia" path="res://art/player sprite.png" id="4_nugk7"]
[ext_resource type="PackedScene" uid="uid://buiojmlhxqyfe" path="res://resources/ui/entity_health_bar.tscn" id="6_1hus0"]
[ext_resource type="PackedScene" uid="uid://bv4mncjbigwgp" path="res://resources/overlap/EnemyHitBox.tscn" id="6_dc3iy"]
[ext_resource type="Texture2D" uid="uid://bbxqyii40fy3p" path="res://art/healthbar_empty.png" id="7_vbhy3"]
[ext_resource type="Texture2D" uid="uid://cfx7qlvtxw1gi" path="res://art/healthbar_border.png" id="8_y38jc"]
[ext_resource type="Texture2D" uid="uid://c1t6h7s1j1twc" path="res://art/healthbar_full.png" id="9_iwlwe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxjqd"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unhda"]
size = Vector2(12, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty5ay"]
size = Vector2(8, 13)

[node name="EntityBase" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7o8nw")
hp = 100
EFFECT_HIT = ExtResource("2_mrjjy")
EFFECT_DIED = ExtResource("3_2qsey")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("4_nugk7")
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_mxjqd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")

[node name="HurtBox" parent="." instance=ExtResource("2_rdp35")]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_unhda")

[node name="EnemyHitBox" parent="." instance=ExtResource("6_dc3iy")]

[node name="CollisionShape2D" parent="EnemyHitBox" index="0"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ty5ay")

[node name="VisibleOnScreenNotifier2D" parent="EnemyHitBox" index="1"]
position = Vector2(-1.49012e-07, -7.5)
scale = Vector2(0.8, 0.85)

[node name="EntityHealthBar" parent="." instance=ExtResource("6_1hus0")]
offset_left = -11.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = -9.0
scale = Vector2(0.7, 0.4)
value = 100.0
texture_under = ExtResource("7_vbhy3")
texture_over = ExtResource("8_y38jc")
texture_progress = ExtResource("9_iwlwe")

[node name="NameBar" type="Label" parent="."]
offset_left = -11.0
offset_top = -25.0
offset_right = 81.0
offset_bottom = -2.0
scale = Vector2(0.2, 0.2)
text = "Placeholder"

[connection signal="died" from="." to="." method="_on_Entity_died"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HurtBox"]
[editable path="EnemyHitBox"]
